Actualización horarios no planificados

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
     <div id="schedule"></div>
     
     <!-- Mensaje de ajuste de ubicación con espacio adicional arriba -->
-    <div id="adjustLocationMessage">Si es que tu ubicación no es precisa, ajústala haciendo clic en el mapa.</div>
-    
+    <div id="adjustLocationMessage">Si es que tu ubicación no es precisa, ajústala haciendo clic en el mapa.<br>
+        Si tu horario no coincide es por una reprogramación no anunciada.<br>
+        Los datos se actualizarán cuando la EEQ publique los horarios oficialmente.
     <div id="map"></div>
 
     <!-- Incluye tu script app.js después de Luxon -->
